--- a/style.css
+++ b/style.css
@@ -1,25 +1,16 @@
-#oladimeji{
-    border-color: white;
-    border-style: solid;
-    border-width: 5px;
-    width: 500px;
-    margin-left: 25%;
-    
-
+/* Write your code here: */
+h1, h2 {
+    color: blueviolet;
 }
 
-#general{
-    text-align: center;
-}
-#Text{
-    color: white;
+.box > p {
+    color: firebrick;
 }
 
-body{
-    background: black;
-    text-align: center;
-    font-family: 'Borel', cursive;
+.box li{
+    color: blue
 }
-h1{
-    text-transform: capitalize;
+
+.box.done{
+    color:seagreen
 }
